# pydantic-world

./: .pre-commit-config.yaml  pyproject.toml
src/: fields.py  models.py  serializers.py  validators.py
src/setting_management/: setting.py
